# vision-inference-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: app_config.hpp  backend_registry.hpp  encoder_interface.hpp  ffmpeg_packet_source.hpp  pipeline_runner.hpp  pipeline_types.hpp
include/backends/: cuda_preprocessor.hpp  mpp_decoder.hpp  mpp_encoder.hpp  nvenc_encoder.hpp  rga_preprocessor.hpp  rknn_infer.hpp  trt_infer.hpp  yolo_postproc.hpp
src/: app_config.cpp  backend_registry.cpp  ffmpeg_packet_source.cpp  main.cpp  pipeline_runner.cpp
src/backends/: cuda_preprocessor.cpp  cuda_preprocessor.cu  decoder_factory.cpp  encoder_factory.cpp  infer_factory.cpp  mpp_decoder.cpp  mpp_encoder.cpp  null_visualizer.cpp  nvdec_decoder.cpp  nvenc_encoder.cpp  opencv_visualizer.cpp  postproc_factory.cpp  preproc_factory.cpp  rga_preprocessor.cpp  rknn_infer.cpp  trt_infer.cpp  yolo_postproc.cpp
tests/: app_config_test.cpp
